k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: visits-app
spec:
  selector:
    app: visits-app
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
